# gql-something-different-prototype

./: .gitignore  .travis.yml  Cargo.toml  README.md
examples/basic/: Cargo.toml  README.md
examples/basic/src/: main.rs  simple_schema.gql
examples/echo-server/: Cargo.toml
examples/echo-server/src/: main.rs  schema.graphql
introspection/: Cargo.toml
introspection/src/: lib.rs
introspection/src/introspection/: mod.rs  resolver.rs  schema.graphql  schema.rs  traits.rs
matchbox-cli/: Cargo.toml
matchbox-cli/src/: main.rs
matchbox-codegen/: Cargo.toml
matchbox-codegen/src/: enums.rs  inputs.rs  interfaces.rs  lib.rs  objects.rs  shared.rs
matchbox-codegen/src/coercion/: arguments.rs  mod.rs  schema.rs  traits.rs
matchbox-codegen/src/introspection/: introspect.rs  mod.rs  schema.rs  unions.rs
matchbox-codegen/src/path_fragment/: mod.rs  objects.rs
matchbox-codegen/src/responders/: fields.rs  gather_impls.rs  interfaces.rs  mod.rs  objects.rs  schema.rs  traits.rs  unions.rs
matchbox-dataloader/: Cargo.toml
matchbox-dataloader/src/: lib.rs
something-different-derive/: Cargo.toml
something-different-derive/src/: coercion.rs  context.rs  enums.rs  inputs.rs  interfaces.rs  lib.rs  objects.rs  shared.rs  unions.rs
src/: coercion.rs  errors.rs  graphql_playground.html  identifiable.rs  introspection.rs  lib.rs  query_validation.rs  resolver.rs  response.rs  service.rs  shared.rs  standalone_server.rs  traits.rs
standalone-server/: Cargo.toml
standalone-server/src/: lib.rs
tests/: basic_schema.graphql  coercion.rs  responses.rs
(+19 files in other folders)
