[package]
name = "tokio-gql"
version = "0.1.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]

[dependencies]
failure = "^0.1.1"
futures = "^0.1.20"
serde = "^1.0"
serde_json = "^1.0"
graphql-parser = "^0.2.0"
something-different-derive = { path = "./something-different-derive" }

[workspace]
members = [
    "./",
    "examples/basic",
    "examples/library",
    "examples/library/included_library",
    "something-different-derive",
]