[package]
name = "tokio-gql"
version = "0.1.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]

[dependencies]
failure = "0.1.1"
futures = "0.1"
matches = "0.1.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
graphql-parser = "0.2.0"
something-different-derive = { path = "./something-different-derive" }
hyper = "0.11"

[workspace]
members = [
    "./",
    "examples/basic",
    "examples/echo-server",
    "examples/library",
    "examples/library/included_library",
    "introspection",
    "something-different-derive",
]
